--- a/practical02/app/src/main/res/layout/activity_practical_test02_main.xml
+++ b/practical02/app/src/main/res/layout/activity_practical_test02_main.xml
@@ -68,5 +68,11 @@
         android:text="@string/request_text"
         android:layout_gravity="center"/>
 
+    <TextView
+        android:id="@+id/currency_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
+
 
 </LinearLayout>
